<resources>
    <string name="app_name">Cropserve</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer" translatable="false">drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="item_start">Start</string>
    <string name="item_feld">Felder</string>
    <string name="item_dmg">Schadensmeldungen</string>
    <string name="item_contract">Verträge</string>
    <string name="item_acc">Account</string>
    <string name="item_app">Über Conserve</string>
    <string name="item_help">Hilfe</string>
    <string name="item_logout">Logout</string>
    <string name="fieldreg_up">Neues Feld anlegen</string>
    <string name="field_delete">Feld löschen</string>
    <string name="nav_headerText" translatable="false">User Name</string>
    <string name="nav_headerMail" translatable="false">user@email.com</string>
    <string name="save_btn">Speichern</string>
    <string name="gps_btn">GPS</string>
    <string name="pos_btn">Setze Position</string>
    <string name="edit_btn">Info</string>
    <string name="add_btn">Info</string>
    <string name="foto">+ Foto hinzufügen</string>
    <string name="feldOhneVertrag">Feld Ohne Vertrag: ID#</string>
    <string name="chosen_user">Benutzer:</string>
    <string-array name="feld_arten">
        <item>Weizen</item>
        <item>Roggen/Wintermenggetreide</item>
        <item>Gerste</item>
        <item>Kartoffeln</item>
        <item>Winterraps</item>
        <item>Mais</item>
        <item>Gartenbauerzeugnisse</item>
        <item>Stillgelegte Fläche</item>
    </string-array>
    <string-array name="feld_verträge">
        <item>Haftpflichtversicherung</item>
        <item>Unwetterschäden</item>
        <item>Naturgewalten</item>
        <item>Frost-Schutz</item>
        <item>Schädlingsbefall</item>
        <item>Wildschaden</item>
        <item>Sachbeschädigung</item>
    </string-array>
    <string name="delete_toast">%1$s wurde gelöscht.</string>
    <string name="no_picture">Kein Bild vorhanden.</string>
    <string name="del_dmg">Schadensfall löschen</string>
    <string name="del_feld">Feld löschen</string>
    <string name="del_confirm1">%1$s löschen?</string>
    <string name="del_confirm2">%1$s löschen? Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="dialog_description">Weitere Feld-Informationen</string>
    <string name="no_internet">Es wird eine initiale Internet-Verbindung benötigt, um die Kartenansicht und ihre Funktionen zu nutzen.</string>
    <string name="action_sign_in_short">Passwort?</string>
    <string name="title_activity_login">Willkommen</string>
    <string name="error_field_required">Feld muss ausgefüllt werden!</string>
    <string name="error_invalid_userid">Ungültige Nutzererkennung!</string>
    <string name="error_invalid_password">Feld muss ausgefüllt werden!</string>
    <string name="login">Anmelden</string>
    <string name="password_hint">Passwort</string>
    <string name="userid_hint">Persönliche Nutzererkennung</string>
    <string name="logout_dialog_title">Abmelden?</string>
    <string name="positive_logout_dialog_option">Ja</string>
    <string name="negative_logout_dialog_option">Nein</string>
    <string name="user_role_prompt">Kontotyp auswählen</string>
    <string-array name="user_role_selection">
        <item>Versicherungsnehmer</item>
        <item>Gutachter</item>
    </string-array>
    <string name="report_dmg">Schadensfall melden</string>
    <string name="dialog_descr_sf">Weitere Schadensfall-Informationen</string>
    <string name="dmg_status">gemeldet</string>
    <string name="s_fall">Schadensfall</string>
    <string name="s_schaden">Schaden</string>
    <string-array name="schadens_arten">
        <item>Schaden durch Erdbeben</item>
        <item>Hagel-Schaden</item>
        <item>Wildschaden</item>
        <item>Überschwemmung</item>
        <item>Dürre</item>
        <item>Lawine</item>
        <item>Schaden durch Personen</item>
    </string-array>
    <string name="search_title">Suche</string>
    <string name="search_hint">App durchsuchen...</string>
    <string name="search_resultF">%1$s befindet sich unter \"Felder\".</string>
    <string name="search_resultS">%1$s befindet sich unter \"Schadensmeldungen\".</string>
    <string name="search_resultDefault">Derzeit keine weiteren Informationen verfügbar.</string>
    <string name="search_resultC">%1$s ist unter \"Verträge\" zu finden.</string>
    <string name="info_missing">Bitte Feld-Informationen angeben</string>
    <string name="info_missing2">Bitte Schadens-Informationen angeben</string>
    <string name="title_activity_search_results" translatable="false">SearchResultsActivity</string>
    <string name="coordinate_missing">Schadenskoordinaten liegen nicht in einem registrierten Feld</string>
    <string name="marker_missing">Zu wenig Marker für eine Fläche</string>
    <string name="info_missing3">Unvollständige Angaben</string>
    <string name="no_permission">Kamera-Funktion nicht freigegeben.</string>
    <string name="no_file">Fehler bei Erstellung der Datei</string>
    <string name="error_1">Fehler beim Anlegen der Tabellen: </string>
    <string name="login_failed">Nutzererkennung oder Passwort sind falsch. Versuchen Sie es erneut</string>
    <string name="button_okay">Okay</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_del">Löschen</string>
    <string name="button_no">Nein</string>
    <string name="button_yes">Ja</string>
    <string name="button_new_field">Neues Feld anlegen</string>
    <string name="my_fields">Meine Felder</string>
    <string name="d_feld">Feld-Art</string>
    <string name="d_region">Region</string>
    <string name="d_vertrag">Vertragswahl</string>
    <string name="d_foto">Foto</string>
    <string name="d_bland">Bundesland</string>
    <string name="d_land">Land</string>
    <string name="d_stadt">Stadt</string>
    <string name="d_bezirk">Landkreis</string>
    <string name="d_gutachter">Gutachter</string>
    <string name="d_damage">Schadensart</string>
    <string name="d_vnehmer">Versicherungsnehmer</string>
    <string name="list_data_header">Feld mit Vertrag: ID#</string>
    <string name="s_list_data_header">Schadensfall: ID#</string>
    <string name="l_maß">ha</string>
    <string name="l_art">Art: </string>
    <string name="l_fläche">Feldfläche: </string>
    <string name="l_land">Land: </string>
    <string name="l_bland">Bundesland: </string>
    <string name="l_landkreis">Landkreis: </string>
    <string name="l_stadt">Stadt: </string>
    <string name="l_vertrag">Vertrag: </string>
    <string name="l_s_art">Schadensart:  </string>
    <string name="l_s_feld">Feld:  </string>
    <string name="l_s_status">Status:  </string>
    <string name="l_s_loc">Standort: </string>
    <string name="l_s_area">Fläche:  </string>
    <string name="l_s_rev">Gutachter:  </string>
    <string name="l_s_date">Datum:  </string>
    <string name="l_s_person">Versicherungsnehmer: </string>
    <string name="search_feld">Feld</string>
    <string name="search_vertrag">Vertrag</string>
    <string name="search_resultno">Keine Suchergebnisse...</string>
    <string name="sr_schaden">Schadensfall: #</string>
    <string name="sr_feld">Feld: #</string>
    <string name="contract_header">Vertragsinfo: %1$s </string>
    <string name="contract_fields">Felder, die diesen Vertrag benutzen:</string>
    <string name="no_fields">Keine Felder mit diesem Vertrag.</string>
    <string name="contract1">Risiken die bei normalem Betrieb Ihres Unternehmens entstehen können, werden durch die Haftpflichtversicherung abgedeckt.\nSie umfasst unter anderem eine Absicherung für die Privathaftpflicht, Bauherrenhaftpflicht, den Handel von agrarwirtschaftlichen Erzeugnissen,eine Ertragsausfallversicherung und viele weitere Risikobereiche.
        Eine vollständige und detaillierte Liste der Ihnen zur Verfügung stehenden Risikoabsicherungen finden Sie auf unserer Website.</string>
    <string name="contract2">Unwetterschäden sind plötzlich und unberechenbar und vernichten schnell die gesamte Ernte mehrerer Felder.\nMit dieser Versicherung werden die am häufigsten auftretenden Unwetterschäden abgeckt.\nDazu gehören unter anderem Hagel, Überflutungen, Erdrutsche und Starkregen. Die daraus resultierenden Schäden werden begutachtet und ein Schadensprofil erstellt.</string>
    <string name="contract3">Naturgewalten sind unberechenbar und richten fast ausnahmslos sehr großen Schaden an; die Kosten für Bestandsverlust und jegliche Form von Schaden sind enorm. Um Versicherungsnehmer dabei zu unterstützen, bietet diese Versicherung eine weit gefächerte Abdeckung von extremen, naturbedingten Schäden und entlastet durch ein einfaches Programm mit Entlastungshilfen und individuellen Kostenplänen.</string>
    <string name="contract4">In der kalten Jahreszeit kann trotz präventiv getroffener Maßnahmen der Frost durchkommen und Felder und Ernte schwer beschädigen. Die resultierenden Kosten sind schwer zu kompensieren. Mit dieser Versicherung werden unteranderem Kosten an Wasserleitungen auf den Felder wie auch direkte Schäden an bebauten Feldern abgedeckt.</string>
    <string name="contract5">Schädlinge wie Termiten, Wespen, Käfer oder Ameisen führen zu einer Beschädigung der Ernte und stellen damit eine große Gefahr für den möglichen Ertrag und das Einkommen dar. Trotz aller Vorsorge kann es immer wieder dazu kommen und dann kommt diese Versicherung ins Spiel. Mit Vor-Ort-Beratung und Schadenserfassung kann durch einen guten dokumentierten Schadensfall die Gefahr für große Verluste eingedämmt und verringert werden.</string>
    <string name="contract6">Von wilden Tieren verursachter Schaden ist selten rechtlich nicht verfolgbar und die Geschädigten bleiben somit auf den Kosten sitzen. Diese Versicherung bietet Schutz vor solchen entstandenen Schäden, egal ob Gebäudeschaden oder Schäden an Feldern und Ernte, und hilft mit einem zuständigen Kontakt zu Ihrer Versicherung den Schaden schnell und genau zu belegen. </string>
    <string name="contract7">Sachbeschädigung an Häusern oder Gut gehört zu den häufigsten Vandalismus-Schäden und die Reparatur- und möglicherweise auch Reinigungskosten sind oft sehr hoch. Vor allem da der Schaden oftmals erst später entdeckt wird, ist eine Schadenersatzforderung ohne Täter schwierig. Diese Versicherung bietet Kostendeckung für Vandalismus durch Dritte und mögliche rechtliche Schritte.</string>
    <string name="new_user_pw">Passwort</string>
    <string name="new_user_pw_rp">Passwort wiederholen</string>
    <string name="new_user_name">Vorname</string>
    <string name="new_user_sName">Nachname</string>
    <string name="new_user_address">Adresse</string>
    <string name="new_user">Einen Benutzeraccount erstellen</string>
    <string name="new_user_button">Benutzer anlegen</string>
    <string name="no_match_pw">Passwörter stimmen nicht überein.</string>
    <string name="match_user">Benutzer existiert bereits.</string>
    <string name="required_form">Bitte alle Felder ausfüllen.</string>
    <string name="success_createUser">Benutzer wurde erfolgreich erstellt.</string>
    <string name="change_password_button_text">Eigenes Passwort ändern</string>
    <string name="user_list">Versicherungsnehmer-Übersicht</string>
    <string name="delete_user">Benutzer löschen</string>
    <string name="create_user">Benutzer erstellen</string>
    <string name="contain_dialog_delete">löschen</string>
    <string name="current_password">Aktuelles Passwort</string>
    <string name="new_password">Neues Passwort</string>
    <string name="confirm_new_password">Neues Passwort bestätigen</string>
</resources>