<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard_background"
    android:backgroundTint="@color/standard_background"
    android:orientation="vertical"
    tools:context="de.uni_stuttgart.informatik.sopra.sopraapp.UserCreationFragment">

    <ScrollView
        android:id="@+id/registrationForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/standard_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/standard_background"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/createUserString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="sans-serif"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal"
                tools:layout_editor_absoluteX="93dp"
                tools:layout_editor_absoluteY="51dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="132dp">

                <EditText
                    android:id="@+id/newUserName"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/new_user_name"
                    android:inputType="text|textPersonName"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="63dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="202dp">

                <EditText
                    android:id="@+id/newUserSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_user_sName"
                    android:inputType="text|textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="269dp">

                <EditText
                    android:id="@+id/newUserAdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_user_address"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="408dp">

                <EditText
                    android:id="@+id/newUserPW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_user_pw"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="475dp">

                <EditText
                    android:id="@+id/newUserPwRp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_user_pw_rp"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancCreateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/colorButtonNormal"
                    android:elevation="10dp"
                    android:text="@string/button_cancel" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/crUserBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:elevation="10dp"
                    android:text="@string/new_user_button" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/creationProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
